# aoc

./: .gitignore
aoc22/: CHANGELOG.md  aoc22.cabal
aoc22/app/: Main.hs
aoc22/src/: Aoc.hs
aoc22/src/Aoc/: App.hs
aoc22/src/Aoc/Solve/: Five.hs  Four.hs  One.hs  Six.hs  Three.hs  Two.hs
aoc23/: CHANGELOG.md  aoc23.cabal
aoc23/app/: Main.hs
aoc23/src/: Aoc.hs
aoc23/src/Aoc/: App.hs  Parse.hs  Solve.hs  Testing.hs
aoc23/src/Aoc/Solve/: Eight.hs  Eighteen.hs  Eleven.hs  Fifteen.hs  Five.hs  Four.hs  Fourteen.hs  Nine.hs  Nineteen.hs  One.hs  Seven.hs  Seventeen.hs  Six.hs  Sixteen.hs  TemplateDay.hs  Ten.hs  Thirteen.hs  Three.hs  Twelve.hs  Twenty.hs  Two.hs
