cabal-version:      3.4
name:               aoc23
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             handdara
maintainer:         handdara.core@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-props
    default-language: Haskell2010
    build-depends:  
        base ^>=4.17.2.0, 
        turtle,
        text,
        bytestring,
        file-embed
    default-extensions: OverloadedStrings

common warnings
    ghc-options: -Wall

library
    import:           warnings
    import:           shared-props
    exposed-modules:  Aoc
    other-modules: Aoc.App, Aoc.Solve
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc23
    import:           warnings
    import:           shared-props
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        aoc23

    hs-source-dirs:   app
    default-language: Haskell2010
